--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,14 +1,17 @@
+bcrypt==4.1.2
 blinker==1.7.0
 click==8.1.7
 Flask==2.0.2
+Flask-Bcrypt==1.0.1
+Flask-JWT-Extended==4.6.0
 Flask-SQLAlchemy==2.5.1
 greenlet==3.0.3
 importlib-metadata==7.0.1
 itsdangerous==2.1.2
 Jinja2==3.1.3
 MarkupSafe==2.1.3
+PyJWT==2.8.0
 SQLAlchemy==1.4.31
 typing-extensions==4.9.0
-werkzeug==2.2.2
+Werkzeug==2.2.2
 zipp==3.17.0
-bcrypt==4.1.2
