--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,11 @@ __pycache__
 # Environment
 venv/
 
-# Server config
-server/serverAuth.py
+# Database
+server/database.db
 
-#DS_store
-.DS_store
+# serverauth
+server/serverAuth.Py
+
+#DS_Store
+.DS_Store
